Mock data displays in an organized table

--- a/cufdApp/angular.json
+++ b/cufdApp/angular.json
@@ -25,7 +25,8 @@
             "aot": false,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              { "glob": "mock-data.json", "input": "./", "output": "./assets/" }
             ],
             "styles": [
               "src/styles.scss",
